--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "wootz-summary-api",
-  "version": "1.0.0",
-  "description": "Manufacturing project summary generator",
+  "version": "2.0.0",
+  "description": "Manufacturing project summary generator - Dynamic and flexible",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "node index.js"
   },
+  "keywords": ["wootz", "manufacturing", "summary", "api", "openai"],
+  "author": "Wootz Team",
+  "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
     "google-spreadsheet": "^4.1.2",
@@ -14,6 +18,7 @@
     "cors": "^2.8.5"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
   }
 }
